fix: add styles for Gitako's 'clippy' feature

--- a/github.user.styl
+++ b/github.user.styl
@@ -959,6 +959,13 @@ SA = _sc_a
             .js-header-wrapper { c: 0 0 bg3 }
             main > :first-child { box-shadow: inset 0 -1px 0 bg5 }
         }
+
+        /// Clippy in code blocks.
+        /.clippy-wrapper .clippy {
+            c: 0 bg5 bg4
+            i { filter: invert(0.8) }
+            &:hover { c: 0 0 bg5 }
+        }
     }
 
     /// Extension -> GitHub Isomorphic contributions.
